[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "bellows"
dynamic = ["version"]
description = "Library implementing EZSP"
urls = {repository = "https://github.com/zigpy/bellows"}
authors = [
    {name = "Russell Cloran", email = "rcloran@gmail.com"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "click-log>=0.2.1",
    "pure_pcapy3==1.0.1",
    "voluptuous",
    "zigpy>=0.54.1",
    'async-timeout; python_version<"3.11"',
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[project.optional-dependencies]
testing = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.8.2",
    "pytest-cov>=3.0.0",
]

[tool.setuptools-git-versioning]
enabled = true

[project.scripts]
bellows = "bellows.cli.main:main"

[tool.isort]
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = ["bellows", "tests"]
forced_separate = "tests"
combine_as_imports = true

[tool.mypy]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.flake8]
exclude = [".venv", ".git", ".tox", "docs", "venv", "bin", "lib", "deps", "build"]
# To work with Black
max-line-length = 88
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# E501: line too long
# D202 No blank lines allowed after function docstring
ignore = ["W503", "E203", "E501", "D202"]
per-file-ignores = ["tests/*:F811,F401,F403"]